# duratypes

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_REVIEW.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: changelog.md  contributing.md  errors.md  faq.md  index.md  installation.md  migration.md  performance.md  plan.md  pydantic.md  quickstart.md  tasks.md  usage.md
docs/api/: core.md  exceptions.md  types.md
src/duratypes/: __init__.py  core.py
tests/: conftest.py  test_core.py  test_pydantic_integration.py
